--- a/views/write.ejs
+++ b/views/write.ejs
@@ -9,16 +9,15 @@
 <body>
     <%- include('nav.html') %>
 
-    <h2>오늘의 일기</h2>
-    <ul>
-        <% for(var i = 0; i < posts.length; i++) { %>
-        <li>
-          <h4>제목 : <%= posts[i].title %></h4>
-          <p>내용 : <%= posts[i].date %> </p>
-          <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
-        </li>
-        <% } %>
-    </ul>
+    <div class="container">
+      <form action="/add" method="POST">
+          <p>오늘의 이야기</p>
+          <input name="title" type="text" placeholder="오늘의 이야기">
+          <p>세부내용</p>
+          <input name="date" type="text" placeholder="세부내용">
+          <button type="submit">저장하기</button>
+      </form>
+  </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script>
 
