--- a/views/write.ejs
+++ b/views/write.ejs
@@ -10,7 +10,7 @@
     <%- include('nav.html') %>
 
     <div class="container">
-      <form action="/add" method="POST">
+      <form action="/list" method="POST">
           <p>오늘의 이야기</p>
           <input name="title" type="text" placeholder="오늘의 이야기">
           <p>세부내용</p>
