--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,9 +12,9 @@
     <div class="container">
       <form action="/login" method="POST">
           <p>아이디</p>
-          <input name="id" type="text" placeholder="오늘의 이야기">
+          <input name="id" type="text" placeholder="아이디를 입력하세요">
           <p>비밀번호</p>
-          <input name="pw" type="text" placeholder="세부내용">
+          <input name="pw" type="text" placeholder="패스워드를 입력하세요">
           <button type="submit">로그인</button>
       </form>
   </div>
