마이페이지, 검색기능 구현

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,7 +10,7 @@
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <%- include('nav.html') %>
 
-    <h2>오늘의 일기</h2>
+    <h2>검색 결과 페이지</h2>
 
     <div style="width:90%; margin:0 auto;">
       <input id="search-input" type="text" style="width:86%; margin-left:2%; height:20px; background-color:#efefef; border:none;">
