--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,10 @@
 <body>
     <%- include('nav.html') %>
 
+    <div>
+      <p>한 알의 모래 속에서 세계를 보며</p>
+      <p>한 송이 들꽃에서 천국을 보라</p>
+      <p>그대 손바닥 안에 무한을 쥐고</p>
+      <p>한순간 속에 영원을 보라</p>
 </body>
 </html>
