--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,11 +11,11 @@
 
     <div class="container">
       <form action="/login" method="POST">
-          <p>아이디</p>
-          <input name="id" type="text" placeholder="아이디를 입력하세요">
-          <p>비밀번호</p>
-          <input name="pw" type="text" placeholder="패스워드를 입력하세요">
-          <button type="submit">로그인</button>
+          <p>ID</p>
+          <input name="id" type="text" placeholder="Please enter your ID">
+          <p>Password</p>
+          <input name="pw" type="text" placeholder="Please enter a password">
+          <button type="submit">log in</button>
       </form>
   </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
