--- a/views/nav.html
+++ b/views/nav.html
@@ -9,8 +9,8 @@
 <body>
     <nav>
         <a href="/">home</a>
-        <a href="/write">글쓰기</a>
-        <a href="/list">목록</a>
+        <a href="/write">write</a>
+        <a href="/list">list</a>
     </nav>
 </body>
 </html>
