--- a/views/write.ejs
+++ b/views/write.ejs
@@ -11,11 +11,11 @@
 
     <div class="container">
       <form action="/list" method="POST">
-          <p>오늘의 이야기</p>
-          <input name="title" type="text" placeholder="오늘의 이야기">
-          <p>세부내용</p>
-          <input name="date" type="text" placeholder="세부내용">
-          <button type="submit">저장하기</button>
+          <p>titul</p>
+          <input name="title" type="text" placeholder="Zadejte předmět">
+          <p>Obsah</p>
+          <input name="date" type="text" placeholder="Zadejte prosím své údaje">
+          <button type="submit">psaní</button>
       </form>
   </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
